# kilroy-face-client-py-sdk

./: .gitattributes  404.html  README.md  environment.yaml  environment.yml  index.html  pyproject.toml
.github/workflows/: docs.yaml  docs.yml  draft.yaml  draft.yml  lint.yaml  pypi.yaml  pypi.yml  test-multiplatform.yaml  test-multiplatform.yml
kilroy_face_client_py_sdk/: pyproject.toml
kilroy_face_client_py_sdk/docs/: mkdocs.yml
kilroy_face_client_py_sdk/docs/docs/: index.md  usage.md
kilroy_face_client_py_sdk/src/kilroy_face_client_py_sdk/: client.py  models.py
search/: search_index.json
usage/: index.html
