# this file is needed to install the package from git without support for subdirectories
# see: https://github.com/python-poetry/poetry/issues/755

[tool.poetry]
name = "kilroy-face-client-py-sdk"
version = "0.4.0"
description = "SDK for kilroy face clients in Python 🧰"
readme = "kilroy_face_client_py_sdk/README.md"
authors = ["kilroy <kilroymail@pm.me>"]
classifiers = ["License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]
repository = "https://github.com/kilroybot/kilroy-face-client-py-sdk"
documentation = "https://kilroybot.github.io/kilroy-face-client-py-sdk"
packages = [{ include = "kilroy-face-client-py-sdk", from = "kilroy_face_client_py_sdk/src" }]

[tool.poetry.dependencies]
python = "^3.9"
kilroy-ws-client-py-sdk = "~0.4"
kilroy-face-py-shared = "~0.2"

# dev

# test
pytest = { version = "^7.0", optional = true }

[tool.poetry.extras]
# need to do it that way until poetry supports dependency groups: https://github.com/python-poetry/poetry/issues/1644
dev = ["pytest"]
test = ["pytest"]

[build-system]
# this should be there, see https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
